# angular-bazel-example

./: .bazelrc  BUILD.bazel  README.md  WORKSPACE  generate.ts  package.json
airplane/: BUILD.bazel  app.ts  devserver.js  index.html
airplane/team0/: BUILD.bazel
biofuels/: BUILD.bazel  app.ts
catapult/: BUILD.bazel  app.ts
deforest/: BUILD.bazel  app.ts
emulator/: BUILD.bazel  app.ts
flooring/: BUILD.bazel  app.ts
graphite/: BUILD.bazel  app.ts
humanoid/: BUILD.bazel  app.ts
internal/: BUILD.bazel  app.ts
joystick/: BUILD.bazel  app.ts
